language/move-lang/tests/move_check/expansion/standalone_fields.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/expansion/standalone_fields.move:3:11
  │
3 │         {f: 1, g: 0};
  │           ^
  │           │
  │           Unexpected ':'
  │           Expected ';'

